[project]
name = "ee5410-hw1"
version = "0.1.0"
description = "EE5410 Computer Arithmetic Homework 1 - Perceptron Classification"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
]
